fix: add z-index to target block to sit above grid lines, and significantly increase vertical spacing around button and map

--- a/src/components/AboutContacts.module.css
+++ b/src/components/AboutContacts.module.css
@@ -150,7 +150,7 @@
 .frameChild {
   width: 100%;
   max-width: 1525px;
-  margin: 60px auto 100px auto;
+  margin: 120px auto 100px auto;
   border-radius: var(--br-15);
   overflow: hidden;
   object-fit: cover;
